[package]
name = "cs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egg = { version = "0.9.4", features = ["lp"] }
ndarray = "0.15"
clap = "2.33"

[[bin]]
name = "cs_optimizer"
path = "src/main.rs"